# lingmo-firmware

./: MAINTAINERS  README.md  RELEASE  lingmo-firmware.doap  meson.build
contrib/: lingmo-firmware.spec.in  org.lingmo.Firmware.json
data/: meson.build  org.lingmo.Firmware.desktop.in
data/appdata/: meson.build  org.lingmo.Firmware.metainfo.xml.in
data/icons/: meson.build
debian/: changelog  control  copyright  lingmo-firmware.lintian-overrides  watch
po/: LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ka.po  nl.po  pa.po  pl.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
snap/: snapcraft.yaml
src/: gfu-common.c  gfu-device-row.c  gfu-main.c  gfu-main.ui  gfu-release-row.c  gfu-release-row.ui  help-overlay.ui  lingmo-firmware.gresource.xml  meson.build
subprojects/: gcab.wrap  libadwaita.wrap
