if get_option('devel')
install_data('org.lingmo.Firmware.Devel.svg',
             install_dir : 'share/icons/hicolor/scalable/apps',
             rename : 'org.lingmo.Firmware.svg')
else
install_data('org.lingmo.Firmware.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
endif
install_data('org.lingmo.Firmware-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
